# BS_Janitor

./: .gitignore  BS_Janitor.csproj  Config.cs  LICENSE  Makefile  Plugin.cs  manifest.json
HarmonyPatches/: AudioTimeSyncControllerPatch.cs  BeatmapDataLoaderPatch.cs  BeatmapSaveDataHelpersPatch.cs  DateTimePatch.cs  LevelCollectionViewControllerPatch.cs  LevelFilterPatch.cs  MediaAsyncLoaderPatch.cs  PlaylistsLibPlaylistPatch.cs  StandardLevelDetailViewPatch.cs  TimeExtensionsPatch.cs  UnityXRHelperPatch.cs
Installers/: MenuInstaller.cs
Libs/bs_janitor/: .clang-format  CMakeLists.txt  Toolchain.cmake
Libs/bs_janitor/include/bs_janitor/: bs_janitor.h  bs_janitor.hh  mono.hh
Libs/bs_janitor/src/: image.cc  main.cc  memory.cc  parser.cc  parser.hh
Libs/bs_janitor/src/include/: memory.hh
Libs/bs_janitor/src/include/stb/: stb_image.h
UI/: SettingsUI.cs
UI/Views/: Settings.bsml
Utils/: BasicBeatmapDataParser.cs  ImageHelpers.cs  ImageLoader.cs  LRUCache.cs  NativeLibraryManager.cs
